--- a/Grains/Base.lproj/Main.storyboard
+++ b/Grains/Base.lproj/Main.storyboard
@@ -81,7 +81,7 @@
             </objects>
             <point key="canvasLocation" x="1713.0434782608697" y="-677.00892857142856"/>
         </scene>
-        <!--Item-->
+        <!--Favourites Table View Controller-->
         <scene sceneID="UIB-h5-BkU">
             <objects>
                 <tableViewController id="xyZ-vy-ghy" customClass="FavouritesTableViewController" customModule="Grains" customModuleProvider="target" sceneMemberID="viewController">
@@ -137,11 +137,14 @@
                             <outlet property="delegate" destination="xyZ-vy-ghy" id="MRh-j7-lgg"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Item" image="heart" catalog="system" id="2Ur-4U-OgA"/>
+                    <navigationItem key="navigationItem" id="vAh-zD-BC3"/>
+                    <connections>
+                        <segue destination="zn7-Ny-qAU" kind="show" identifier="goToDescrip" id="vLR-gk-Brw"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E1V-pr-VEX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="802.89855072463774" y="78.348214285714278"/>
+            <point key="canvasLocation" x="1713.0434782608697" y="78.348214285714278"/>
         </scene>
         <!--Description View Controller-->
         <scene sceneID="sv4-gH-MHs">
@@ -366,7 +369,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kDJ-r8-sax" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2330.434782608696" y="282.58928571428572"/>
+            <point key="canvasLocation" x="3240.579710144928" y="282.58928571428572"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="bjp-qs-dS0">
@@ -415,13 +418,32 @@
                     </tabBar>
                     <connections>
                         <segue destination="A2a-9C-CL5" kind="relationship" relationship="viewControllers" id="dB2-nJ-I4X"/>
-                        <segue destination="xyZ-vy-ghy" kind="relationship" relationship="viewControllers" id="hoO-Cw-mPc"/>
+                        <segue destination="hke-Pc-pjl" kind="relationship" relationship="viewControllers" id="hoO-Cw-mPc"/>
                         <segue destination="LQx-Pu-WCy" kind="relationship" relationship="viewControllers" id="D4O-nI-tzU"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mhn-Ii-6h2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-107.24637681159422" y="-677.00892857142856"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="fqh-Zq-6Z0">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hke-Pc-pjl" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" image="heart" catalog="system" id="2Ur-4U-OgA"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5P9-yH-cyP">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xyZ-vy-ghy" kind="relationship" relationship="rootViewController" id="dcW-wt-EnJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cyb-As-Lq1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="802.89855072463774" y="78.348214285714278"/>
         </scene>
     </scenes>
     <resources>
@@ -433,4 +455,7 @@
         <image name="timer" width="256" height="256"/>
         <image name="timer 2.png" width="512" height="512"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="vLR-gk-Brw"/>
+    </inferredMetricsTieBreakers>
 </document>
